# slwm

./: .gitignore  AGENTS.md  LICENSE  README.md  architecture.md  baselines.md  design_decisions.md  experiment_registry.md  exploration.md  hypotheses.md  inference.md  literature_map.md  policy_commitment.md  pyproject.toml  research_impl_eval_docs.md  risks_and_assumptions.md  signal_latent_world_model_research_plan.md  sprint_playbook_prompts.md
configs/: default_i0.json
data/: __init__.py  audio_visual_latents.py  contract.py  text_code.py  tokenizer.py
docs/: README.md  data_contract.md  model_spec.md  t1_text_code_training.md
evals/: __init__.py
exploration/: __init__.py
models/: __init__.py  latent_field.py  module.py  slwm_config.py  slwm_core.py  slwm_parameter_count.py  slwm_signal_predictor.py  types.py
tests/: test_baseline_forward_backward.py  test_baseline_parameter_counts.py  test_baseline_smoke_registry.py  test_config_roundtrip.py  test_data_contract.py  test_dummy_end_to_end.py  test_experiment_registry_writer.py  test_i3_output_policy.py  test_imports.py  test_module_base.py  test_shape_contracts.py  test_slwm_i2_core.py  test_t0_continuous_baseline.py  test_t0_runner_smoke.py  test_t0_synthetic_signals.py  test_t1_text_code_data.py  test_t1_text_training.py  test_t1_torch_full_path.py  test_t2_audio_visual_latents.py  test_t2_training_runner.py
training/: README.md  __init__.py  baseline_smoke.py  synthetic_metrics.py  synthetic_signals.py  t0_synthetic_pretrain.py  t1_prepare_text_code.py  t1_text_baseline.py  t1_torch_text.py  (+2 more)
(+118 files in other folders)
