[project]
name = "slwm-124m-research"
version = "0.0.0"
description = "Research utilities, baselines, and training runners for SLWM-124M."
requires-python = ">=3.10"
dependencies = ["numpy>=2.0"]

[project.optional-dependencies]
t1-full = ["torch>=2.3", "transformers>=4.40", "datasets>=2.19", "psutil>=5.9"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
